# aiogram3-bot-template

./: .env.dist  Dockerfile  app.py  docker-compose.yml  loader.py  pyproject.toml  requirements.txt
bot/: __main__.py  config.py
bot/filters/: __init__.py  is_bot_admin.py
bot/handlers/: __init__.py
bot/handlers/admins/: __init__.py  stats.py
bot/handlers/users/: __init__.py  register.py  start.py
bot/keyboards/inline/: register.py
bot/middlewares/: __init__.py  throttling.py
bot/models/: __init__.py  user.py
bot/services/: admin_notificator.py  commands_setter.py
database/: __init__.py  base.py  implement.py  manager.py
handlers/: __init__.py
tools/: __init__.py  filer.py
utils/: __init__.py  logging.py  notify_admins.py  throttling.py
